--- a/style.css
+++ b/style.css
@@ -27,3 +27,15 @@ p
 {
 	color:#ffffff;
 }
+
+ul.nav
+{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 60px;
+}
+
+li a {
+    display: inline;
+}
