--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ a:visited
 
 a:hover
 {
-	font-weight:bold;
+	font-weight:normal;
 	color: #00aa00;
 }
 
@@ -33,11 +33,13 @@ p
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #dddddd;
+    background-color: #ffffff;
 }
 
 .nav li {
     float: left;
+    padding: 1px;
+    background-color: #dddddd;
 }
 
 .nav li a {
@@ -45,8 +47,4 @@ p
     padding: 8px;
     color: #000000;
     text-decoration: none;
-}
-
-.nav li a:hover {
-    background-color:#aaaaaa;
 }
