--- a/style.css
+++ b/style.css
@@ -33,13 +33,16 @@ p
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #ffffff;
 }
 
 .nav li {
     float: left;
-    margin: 2px;
+    border-right: 1px solid #bbb;
     background-color: #dddddd;
+}
+
+.nav li:last-child {
+	border-right: none;
 }
 
 .nav li a {
