--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 body
 {
 	background-image:url(https://afremov.com/image.php?type=P&id=18106);
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 a:link
