--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body
 	background-image:url(https://afremov.com/image.php?type=P&id=18106);
 	background-size: cover;
 	background-repeat: no-repeat;
-	color: red;
+	color: #ffffff;
 }
 
 a:link
