--- a/style.css
+++ b/style.css
@@ -60,5 +60,6 @@ a:hover
 }
 
 .background {
-	background-color: rgba(200,200,200,0.9);
+	background-color: rgba(200,200,200,0.8);
+	margin: 50px;
 }
