--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@ a:hover
 }
 
 .background {
-	background-color: rgba(200,200,200,0.8);
+	background-color: rgba(150,150,150,0.6);
 	display: inline-block;
+}
+
+a.background:hover {
+	background-color: rgba(200,200,200,0.8);
 }
