--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body
 	background-size: cover;
 	background-repeat: no-repeat !important;
 	background-attachment: fixed !important;
+	padding: 0px auto;
 	color: #ffffff;
 }
 
